--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
-{
+{ 
   "name": "nlw-node",
   "version": "1.0.0",
   "description": "- Retorna formulário de acesso",
   "main": "index.js",
   "scripts": {
-    "server": "tsx watch --env-file .env src/server.ts"
+    "server": "tsx watch --env-file .env src/server.ts",
+    "build": "tsup src --format esm" 
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,7 @@
   "devDependencies": {
     "@types/node": "^20.12.7",
     "prisma": "^5.12.1",
+    "tsup": "^8.0.2",
     "tsx": "^4.7.2",
     "typescript": "^5.4.5"
   },
